--- a/BudgetForecast.Data/BudgetForecast.Data.csproj
+++ b/BudgetForecast.Data/BudgetForecast.Data.csproj
@@ -9,6 +9,10 @@
   <ItemGroup>
     <None Remove="Dapper" />
     <None Remove="Microsoft.Data.SqlClient" />
+    <None Remove="Models\" />
+    <None Remove="Enums\" />
+    <None Remove="Metrics\" />
+    <None Remove="Interfaces\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Dapper" Version="2.0.123" />
@@ -19,5 +23,11 @@
     <Compile Remove="Models\Bill.cs" />
     <Compile Remove="Models\Expense.cs" />
     <Compile Remove="Models\Transaction.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Entities\" />
+    <Folder Include="Enums\" />
+    <Folder Include="Metrics\" />
+    <Folder Include="Interfaces\" />
   </ItemGroup>
 </Project>
